# score-addon-jk

./: .gitmodules  CMakeLists.txt  README.md  addon.json  init.sh  release.sh  score_addon_jk.cpp  score_addon_jk.hpp
.github/workflows/: builds.yaml
Jk/: AnEffect.hpp  AnEffectModel.cpp  AnEffectModel.hpp  AnEffectUi.hpp  Filter.cpp  Filter.hpp
